# Practical_DL

./: .gitignore  CNN_GRU.ipynb  EDA-Data_preprocessing_visulisation.ipynb  eda.ipynb  merged.ipynb  prep_function.ipynb  pyproject.toml  volatility_ARCH_ModelsForecast+RollingMean.ipynb
LSTM_maayeesha/: LSTM_forecasting_small_size.ipynb
